add swigger ui to auth
