# internal/middleware/validate_auth.go
@@ -3,15 +3,16 @@ package middleware
 import (
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
-	"github.com/qhmd/gitforgits/internal/dto"
+	"github.com/qhmd/gitforgits/internal/dto/auth"
 	"github.com/qhmd/gitforgits/utils"
 )
 
 func ValidateAuthLogin() fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		var req dto.LoginRequest
+		var req auth.LoginRequest
 		if err := c.BodyParser(&req); err != nil {
-			return c.Status(400).JSON(fiber.Map{"error": "invalid request body"})
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "invalid request body", err)
+
 		}
 		if err := utils.Validate.Struct(req); err != nil {
 			validationError := err.(validator.ValidationErrors)
@@ -19,7 +20,7 @@ func ValidateAuthLogin() fiber.Handler {
 			for _, e := range validationError {
 				errors[e.Field()] = utils.MsgForTag(e)
 			}
-			return c.Status(400).JSON(errors)
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "validation error", errors)
 		}
 		c.Locals("validateAuth", req)
 		return c.Next()
@@ -28,9 +29,9 @@ func ValidateAuthLogin() fiber.Handler {
 
 func ValidateAuthReg() fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		var req dto.RegisterRequest
+		var req auth.RegisterRequest
 		if err := c.BodyParser(&req); err != nil {
-			return c.Status(400).JSON(fiber.Map{"error": "invalid request body"})
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "invalid request body", err)
 		}
 
 		if err := utils.Validate.Struct(req); err != nil {
@@ -39,7 +40,7 @@ func ValidateAuthReg() fiber.Handler {
 			for _, e := range validationError {
 				errors[e.Field()] = utils.MsgForTag(e)
 			}
-			return c.Status(400).JSON(errors)
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "validation error", errors)
 		}
 		c.Locals("validateAuth", req)
 		return c.Next()
