# internal/middleware/validate_book.go
@@ -3,16 +3,16 @@ package middleware
 import (
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
-	"github.com/qhmd/gitforgits/internal/dto"
+	"github.com/qhmd/gitforgits/internal/dto/book"
 	"github.com/qhmd/gitforgits/utils"
 )
 
 func ValidateBook() fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		var req dto.BookRequest
+		var req book.BookRequest
 
 		if err := c.BodyParser(&req); err != nil {
-			return c.Status(400).JSON(fiber.Map{"error": "invalid request body"})
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "invalid request body", err)
 		}
 
 		if err := utils.Validate.Struct(req); err != nil {
@@ -22,8 +22,8 @@ func ValidateBook() fiber.Handler {
 			for _, e := range validationErrors {
 				errors[e.Field()] = utils.MsgForTag(e)
 			}
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "validation error", errors)
 
-			return c.Status(400).JSON(fiber.Map{"error": errors})
 		}
 
 		c.Locals("validateBook", req)
