# internal/middleware/validate_user.go
@@ -3,16 +3,15 @@ package middleware
 import (
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
-	"github.com/qhmd/gitforgits/internal/dto"
+	"github.com/qhmd/gitforgits/internal/dto/auth"
 	"github.com/qhmd/gitforgits/utils"
 )
 
 func ValidateUserUpdate() fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		var req dto.UserResponse
+		var req auth.UserResponse
 		if err := c.BodyParser(&req); err != nil {
-			return c.Status(400).JSON(fiber.Map{
-				"error": "invalid body request"})
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "invalid request body", err)
 		}
 		if err := utils.Validate.Struct(req); err != nil {
 			ValidationError := err.(validator.ValidationErrors)
@@ -20,7 +19,7 @@ func ValidateUserUpdate() fiber.Handler {
 			for _, e := range ValidationError {
 				errors[e.Field()] = utils.MsgForTag(e)
 			}
-			return c.Status(400).JSON(errors)
+			return utils.ErrorResponse(c, fiber.StatusBadRequest, "validation error", errors)
 		}
 		c.Locals("validateUser", req)
 		return c.Next()
